<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6C2F2F"
    android:backgroundTint="#6B9BB9D1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule2"
        android:textSize="48sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="45dp"
        tools:ignore="MissingConstraints" />

    <TextClock
        android:id="@+id/textClock1"
        android:layout_width="4dp"
        android:layout_height="139dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.517" />

    <CalendarView
        android:id="@+id/calendarView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="404dp"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:text="@string/set_specific_date"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="360dp"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="186dp"
        android:layout_height="39dp"
        android:text="@string/time_1"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="154dp"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="186dp"
        android:layout_height="39dp"
        android:text="@string/time_2"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="193dp"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="186dp"
        android:layout_height="39dp"
        android:text="@string/time_3"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="232dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTime1"
        android:layout_width="112dp"
        android:layout_height="39dp"
        android:ems="10"
        android:inputType="time"
        android:text="@string/_6am"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.729"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTime3"
        android:layout_width="112dp"
        android:layout_height="39dp"
        android:ems="10"
        android:inputType="time"
        android:text="@string/_12pm"
        tools:layout_editor_absoluteX="218dp"
        tools:layout_editor_absoluteY="193dp"
        tools:ignore="MissingConstraints"
        android:autofillHints="time2" />

    <EditText
        android:id="@+id/editTextTime4"
        android:layout_width="112dp"
        android:layout_height="39dp"
        android:ems="10"
        android:inputType="time"
        android:text="@string/_6pm"
        tools:layout_editor_absoluteX="218dp"
        tools:layout_editor_absoluteY="232dp"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="42dp"
        android:layout_height="40dp"
        app:srcCompat="@android:drawable/ic_menu_add"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="271dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/add_more_time"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="271dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#4077A1"
        android:text="@string/set2"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="791dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>